--- a/rapportEnseirb/intro.tex
+++ b/rapportEnseirb/intro.tex
@@ -7,8 +7,8 @@ Il y a donc deux étapes non entièrement disjointes qui sont étudiées dans le
 Un des modèles utilisé pour représenter ces scénarios est celui des réseaux de Petri, cependant, d'autres approches, comme par exemple une formalisation à base de \gls{reactiveml} sont étudiées en parallèle. 
 
 Le cœur de mon travail lors de ce stage a été d'étudier un moyen d'étendre l'exécution des réseaux de Petri à un réseau de machines, de manière à pouvoir étendre la puissance d'expression des outils scénaristiques proposés par \ac{OSSIA}.
-Cela a aussi engendré la nécessité d'augmenter les capacités du logiciel lors de la composition, et l'introduction de nouveaux concepts dans le formalisme existant, tout en gardant la compatibilité avec ce qui avait déjà été fait.
+Cela a aussi engendré la nécessité d'augmenter les capacités du logiciel lors de la composition, et l'introduction de nouveaux concepts dans le formalisme existant, tout en maintenant la compatibilité avec ce qui avait déjà été fait.
 
-Ce stage étant réalisé dans le cadre d'un double diplôme entre l'Université de Bordeaux et l'ENSEIRB-MATMECA, il comporte une partie orientée recherche, et une partie orientée ingénierie. Le présent document témoigne majoritairement du travail de recherche effectué; plus d'informations quant au processus de développement logiciel sont présentées dans le rapport pour l'ENSEIRB-MATMECA pas encore paru.
+Ce stage étant réalisé dans le cadre d'un double diplôme entre l'Université de Bordeaux et l'ENSEIRB-MATMECA, il comporte une partie orientée recherche, et une partie orientée ingénierie. Le présent document témoigne majoritairement du travail d'ingénierie; plus d'informations quant au processus de recherche, ainsi qu'une bibliographie complète sont présentées dans le rapport délivré à l'Université de Bordeaux.
 
-La problématique du sujet et l'environnement de travail seront d'abord présentés en détail, puis une revue de l'état de l'art sera effectuée. Le reste de ce document présente l'approche suivie pour résoudre le problème demandé, d'abord sur le plan théorique, puis au niveau de l'implémentation.
+La problématique du sujet et l'environnement de travail seront d'abord présentés en détail. Puis l'approche suivie pour résoudre le problème demandé sera avancée, d'abord sur le plan théorique, puis au niveau de l'implémentation.
