--- a/rapportEnseirb/problematique.tex
+++ b/rapportEnseirb/problematique.tex
@@ -206,7 +206,7 @@ Il est apparu assez clairement que la majorité de mon travail théorique porter
 
 J'ai donc essayé de réaliser un existant à jour sur ce sujet, ainsi que sur celui des dernières avancées en répartition et en synchronisation de machines et d'horloges.
 Néanmoins, malgré des rencontres avec plusieurs enseignants, je n'ai pas trouvé d'existant portant spécifiquement sur l'exécution des réseaux de Petri dans un cas réparti.
-Cette phase est détaillée au \cref{chapterStateOfTheArt}.
+Cette phase est détaillée dans le rapport dédié à l'Université de Bordeaux, en section \textit{Existant}.
 
 Par la suite, j'ai essayé de concevoir des méthodes théoriques pouvant répondre au problème.
 J'ai choisi celle qui a semblé la plus pertinente en les comparant, et j'ai essayé de prouver sa justesse, ainsi que de proposer des améliorations.
@@ -240,10 +240,11 @@ Je me suis principalement organisé en sprints de 15 jours, qui parfois ponctué
 		Mi à fin mars &  Essais de conception des algorithmes de répartition de réseaux de Petri \newline \\
 		Début à mi-avril & Formalisation et vérification, portage de \brand{Jamoma} sous \gls{CMake} \newline \\
 		Mi à fin avril & Conception et implémentation de l'\ac{API} dédiée à la répartition dans Score \newline \\
-		Début à mi-mai & Rédaction du présent mémoire \newline \\
+		Début à mi-mai & Rédaction du mémoire pour l'Université de Bordeaux \newline \\
 		14, 15, 16 Mai & Troisième réunion \ac{OSSIA} \newline \\
-		Mi à fin mai & Rédaction du mémoire pour l'ENSEIRB-MATMECA, préparation des soutenances \newline \\
-		Début Juin & Continuation de l'implémentation, soutenances \\
+		Mi à fin mai & Rédaction du présent mémoire, préparation des soutenances \newline \\
+		Début Juin & Continuation de l'implémentation, soutenances \newline \\
+		20 Juin & Participation aux conférences du cycle Arts \& Sciences du SCRIME \\
 	\end{tabu}
 	\caption{Organisation au cours du stage}
 	\label{tbl.Timeline}
