--- a/rapportEnseirb/rapport.tex
+++ b/rapportEnseirb/rapport.tex
@@ -44,6 +44,7 @@
 \usepackage{siunitx}
 \usepackage{caption}
 \usepackage{enumitem}
+\usepackage{tikz-uml}
 \usepackage[unicode,linktocpage=true]{hyperref}
 \usepackage[xindy,toc]{glossaries}
 \usepackage[numbers,longnamesfirst]{natbib}
@@ -68,7 +69,7 @@
 
 \include{intro}
 \include{problematique}
-\include{existant}
+%\include{existant}
 \include{formalisation/formalisation}
 \include{implementation}
 \include{conclusion}
