--- a/rapportEnseirb/problematique.tex
+++ b/rapportEnseirb/problematique.tex
@@ -24,7 +24,7 @@ Les interactions parfois complexes entre ces acteurs sont expliquées dans \cite
 \label{section.presOssia}
 Les travaux du projet portent en partie sur la réalisation d'un formalisme assez expressif pour permettre de s'en servir pour des usages très différents.
 
-Ce formalisme repose sur la notion de scénario interactif, qui repose elle-même sur la notion de temps, au sens ou on l'entend couramment, mais aussi étendu des manières présentées en \cref{tbl.tempsOSSIA}.
+Ce formalisme repose sur la notion de scénario interactif, qui repose elle-même sur la notion de temps, au sens où on l'entend couramment, mais aussi étendu des manières présentées en \cref{tbl.tempsOSSIA}.
 
 \begin{table}[H]
 	\centering
