--- a/rapportEnseirb/debut.tex
+++ b/rapportEnseirb/debut.tex
@@ -11,7 +11,7 @@
 
 	\begin{spacing}{1.7}
     \textsc{\Huge Répartition des réseaux de Petri dans le cadre du logiciel i-score}\\[1cm]
-    {\huge Travail réalisé dans le cadre du Master Recherche de l'Université de Bordeaux, spécialité Image, Son, Vidéo}\\[1cm]
+    {\huge Projet à finalité Entreprise}\\[1cm]
     {\Large Sous la direction de : }
     {\Large Myriam \bsc{Desainte-Catherine},
      Serge \bsc{Chaumette}}
