--- a/slidesConf/debut.tex
+++ b/slidesConf/debut.tex
@@ -113,7 +113,21 @@
 \end{frame}
 
 \begin{frame}{Support théorique}
-	Réseaux de Petri : outil de modélisation de processus, conçu dans les années 60.
+	Réseaux de Petri : outil de modélisation de processus, conçu dans les années 60 par C. A. Petri.
+	
+	\begin{itemize}
+		\item Places.
+		\item Transitions.
+		\item Jeton.
+	\end{itemize}
+	
+	\begin{figure}[h!]
+		\centering
+		\only<1>{\input{figures/simplePetriNet}}\only<2>{\input{figures/simplePetriNet2}}\only<3>{\input{figures/simplePetriNet3}}
+		\caption{Réseau de Petri}
+		\label{fig:petriNet}
+	\end{figure}
+	
 \end{frame}
 
 \subsection{OSSIA}
