--- a/slidesConf/header.tex
+++ b/slidesConf/header.tex
@@ -1,5 +1,6 @@
 \subsection*{Introduction}
-\begin{frame}
+\begin{frame} \begin{figure}{ \centering 
+	\includegraphics[width=9cm,height=4cm]{images/banniere.pdf} }\end{figure}
 	%\pgfuseimage{banniere}
 	\vspace{0.5cm}
 	\begin{center}
